[tool.poetry]
name = "repl_nix_FlaskSQL2Excel-2"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
mysql-connector-python = "^8.0.33"
openpyxl = "^3.1.2"
pandas = "^2.0.1"
SQLAlchemy = "^2.0.12"
psutil = "^5.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
